// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`immutable-data > typescript > options > ignoreImmediateMutation > reports immediately mutation when disabled 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 28,
      "endLine": 1,
      "line": 1,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 28,
      "endLine": 2,
      "line": 2,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 26,
      "endLine": 3,
      "line": 3,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "new Map([[5, 6]]).set(4, 8);
new Map([[5, 6]]).delete(4);
new Map([[5, 6]]).clear();",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 28,
          "endLine": 1,
          "line": 1,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 28,
          "endLine": 2,
          "line": 2,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 26,
          "endLine": 3,
          "line": 3,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "new Map([[5, 6]]).set(4, 8);
new Map([[5, 6]]).delete(4);
new Map([[5, 6]]).clear();",
    },
  ],
}
`;

exports[`immutable-data > typescript > options > ignoreNonConstDeclarations > reports variables declared as const 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 2,
      "line": 2,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 3,
      "line": 3,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 4,
      "line": 4,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "const x = new Map([[5, 6]]);
x.set(4, 8);
x.delete(4);
x.clear();",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 2,
          "line": 2,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 3,
          "line": 3,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 4,
          "line": 4,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "const x = new Map([[5, 6]]);
x.set(4, 8);
x.delete(4);
x.clear();",
    },
  ],
}
`;

exports[`immutable-data > typescript > report mutating map methods 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 2,
      "line": 2,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 12,
      "endLine": 3,
      "line": 3,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 4,
      "line": 4,
      "message": "Modifying a map is not allowed.",
      "messageId": "map",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "const x = new Map([[5, 6]]);
x.set(4, 8);
x.delete(4);
x.clear();",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 2,
          "line": 2,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 12,
          "endLine": 3,
          "line": 3,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 4,
          "line": 4,
          "message": "Modifying a map is not allowed.",
          "messageId": "map",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "const x = new Map([[5, 6]]);
x.set(4, 8);
x.delete(4);
x.clear();",
    },
  ],
}
`;
